Add food menu page

--- a/html/about.html
+++ b/html/about.html
@@ -12,6 +12,10 @@
       rel="stylesheet"
       type="text/css"
     />
+
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="/images/chick.webp" />
+
     <title>About | Northwings</title>
   </head>
   <body>
@@ -28,13 +32,10 @@
             <a href="/index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="/index.html" class="nav-link">About</a>
+            <a href="/html/index.html" class="nav-link">About</a>
           </li>
           <li class="nav-item">
-            <a href="/index.html" class="nav-link">Food menu</a>
-          </li>
-          <li class="nav-item">
-            <a href="/index.html" class="nav-link">Book table</a>
+            <a href="html/food-menu.html" class="nav-link">Food menu</a>
           </li>
         </ul>
 
@@ -42,6 +43,7 @@
           <i class="fas fa-home"></i>
           <i class="fas fa-search"></i>
           <i class="fas fa-user"></i>
+          <i class="fas fa-comments"></i>
         </div>
       </div>
     </nav>
@@ -77,7 +79,7 @@
       <h1 class="chef-intro">Our Golden Chefs</h1>
       <div class="chef-item-container">
         <div class="chef-item">
-          <img src="/images/chef1.webp" alt="Chef" class="chef-img" />
+          <img src="/images/chef/chef1.webp" alt="Chef" class="chef-img" />
           <h2 class="chef-name">Chef name</h2>
           <div class="chef-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -85,7 +87,7 @@
           </div>
         </div>
         <div class="chef-item">
-          <img src="/images/chef2.webp" alt="Chef" class="chef-img" />
+          <img src="/images/chef/chef2.webp" alt="Chef" class="chef-img" />
           <h2 class="chef-name">Chef name</h2>
           <div class="chef-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -93,7 +95,7 @@
           </div>
         </div>
         <div class="chef-item">
-          <img src="/images/chef3.webp" alt="Chef" class="chef-img" />
+          <img src="/images/chef/chef3.webp" alt="Chef" class="chef-img" />
           <h2 class="chef-name">Chef name</h2>
           <div class="chef-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -101,7 +103,7 @@
           </div>
         </div>
         <div class="chef-item">
-          <img src="/images/chef4.webp" alt="Chef" class="chef-img" />
+          <img src="/images/chef/chef4.webp" alt="Chef" class="chef-img" />
           <h2 class="chef-name">Chef name</h2>
           <div class="chef-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
