--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       type="text/css"
     />
 
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="/images/chick.webp" />
+
     <title>Home | Northwings</title>
   </head>
   <body>
@@ -33,10 +36,7 @@
             <a href="/html/about.html" class="nav-link">About</a>
           </li>
           <li class="nav-item">
-            <a href="/index.html" class="nav-link">Food menu</a>
-          </li>
-          <li class="nav-item">
-            <a href="/index.html" class="nav-link">Book table</a>
+            <a href="/html/food-menu.html" class="nav-link">Food menu</a>
           </li>
         </ul>
 
@@ -44,6 +44,7 @@
           <i class="fas fa-home"></i>
           <i class="fas fa-search"></i>
           <i class="fas fa-user"></i>
+          <i class="fas fa-comments"></i>
         </div>
       </div>
     </nav>
@@ -74,22 +75,26 @@
     <section class="food-article-section">
       <article class="food-article">
         <div class="food-article-item">
-          <img class="food-article-img" src="/images/food-article.jpg" alt="" />
-          <h1 class="food-article-title">Food name</h1>
+          <img
+            class="food-article-img"
+            src="/images/food_article/food-article.jpg"
+            alt=""
+          />
+          <h1 class="food-article-title">Chicken Wings</h1>
           <p class="food-article-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
-          <button class="food-article-btn">See more</button>
+          <button class="food-article-btn">Order Now</button>
         </div>
 
         <div class="food-article-item">
           <img
             class="food-article-img"
-            src="/images/food-article2.jpg"
+            src="/images/food_article/food-article2.jpg"
             alt=""
           />
-          <h1 class="food-article-title">Food name</h1>
+          <h1 class="food-article-title">Chicken Tenders</h1>
           <p class="food-article-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -98,22 +103,22 @@
             class="hero-btn"
             style="margin-top: 1.5rem; font-weight: bold"
           >
-            See more
+            Order Now
           </button>
         </div>
 
         <div class="food-article-item">
           <img
             class="food-article-img"
-            src="/images/food-article3.jpg"
+            src="/images/food_article/food-article3.jpg"
             alt=""
           />
-          <h1 class="food-article-title">Food name</h1>
+          <h1 class="food-article-title">Filipino Spaghetti</h1>
           <p class="food-article-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
-          <button class="food-article-btn">See more</button>
+          <button class="food-article-btn">Order Now</button>
         </div>
       </article>
     </section>
@@ -127,7 +132,10 @@
         <div class="choose-us-right">
           <h1 class="choose-us-title">Why People Choose Us?</h1>
           <div class="choose-us-item">
-            <img src="./images/food-article.jpg" alt="Choose us image" />
+            <img
+              src="./images/food_article/food-article.jpg"
+              alt="Choose us image"
+            />
             <div class="choose-us-item-content">
               <h2>Choose your Favorite</h2>
               <p>
@@ -138,7 +146,10 @@
           </div>
 
           <div class="choose-us-item">
-            <img src="./images/food-article2.jpg" alt="Choose us image" />
+            <img
+              src="./images/food_article/food-article2.jpg"
+              alt="Choose us image"
+            />
             <div class="choose-us-item-content">
               <h2>Choose your Favorite</h2>
               <p>
@@ -149,7 +160,10 @@
           </div>
 
           <div class="choose-us-item">
-            <img src="./images/food-article3.jpg" alt="Choose us image" />
+            <img
+              src="./images/food_article/food-article3.jpg"
+              alt="Choose us image"
+            />
             <div class="choose-us-item-content">
               <h2>Choose your Favorite</h2>
               <p>
@@ -175,7 +189,7 @@
         <div class="box"></div>
         <div class="popular-food-item">
           <img
-            src="./images/popular-food.jpg"
+            src="./images/popular_food/popular-food.jpg"
             alt=""
             class="popular-food-img"
           />
@@ -188,7 +202,7 @@
         </div>
         <div class="popular-food-item">
           <img
-            src="./images/popular-food2.jpg"
+            src="./images/popular_food/popular-food2.jpg"
             alt=""
             class="popular-food-img"
           />
@@ -201,7 +215,7 @@
         </div>
         <div class="popular-food-item">
           <img
-            src="./images/popular-food3.jpg"
+            src="./images/popular_food/popular-food3.jpg"
             alt=""
             class="popular-food-img"
           />
@@ -214,7 +228,7 @@
         </div>
         <div class="popular-food-item">
           <img
-            src="./images/food-article2.jpg"
+            src="./images/food_article/food-article2.jpg"
             alt=""
             class="popular-food-img"
           />
