--- a/html/about.html
+++ b/html/about.html
@@ -35,7 +35,7 @@
             <a href="/html/index.html" class="nav-link">About</a>
           </li>
           <li class="nav-item">
-            <a href="html/food-menu.html" class="nav-link">Food menu</a>
+            <a href="/html/food-menu.html" class="nav-link">Food menu</a>
           </li>
         </ul>
 
